# TFE_MAPF

./: .gitignore  AStar.cpp  AStar.h  AStarProblem_8h.html  AStarProblem_8h__dep__incl.dot  AStarProblem_8h__dep__incl.map  AStarProblem_8h__dep__incl.md5  AStar_8dox.html  AStar_8h.html  AStar_8h__dep__incl.dot  AStar_8h__dep__incl.map  AStar_8h__dep__incl.md5  AStar_8h__incl.dot  AStar_8h__incl.map  AStar_8h__incl.md5  AgentConflict_8h.html  AgentConflict_8h__dep__incl.dot  AgentConflict_8h__dep__incl.map  AgentConflict_8h__dep__incl.md5  AlreadyConflictedBeforeSet_8h.html  AlreadyConflictedBeforeSet_8h__dep__incl.dot  AlreadyConflictedBeforeSet_8h__dep__incl.map  AlreadyConflictedBeforeSet_8h__dep__incl.md5  AlreadyConflictedBeforeSet_8h__incl.dot  AlreadyConflictedBeforeSet_8h__incl.map  AlreadyConflictedBeforeSet_8h__incl.md5  CBS_8dox.html  CMakeLists.txt  ConflictBasedSearch_8cpp.html  ConflictBasedSearch_8cpp__incl.dot  ConflictBasedSearch_8cpp__incl.map  ConflictBasedSearch_8cpp__incl.md5  ConflictBasedSearch_8h.html  ConflictBasedSearch_8h__dep__incl.dot  ConflictBasedSearch_8h__dep__incl.map  ConflictBasedSearch_8h__dep__incl.md5  ConflictBasedSearch_8h__incl.dot  ConflictBasedSearch_8h__incl.map  ConflictBasedSearch_8h__incl.md5  ConflictTreeNode_8h.html  (+1169 more)
AStarProblems/: AStarProblem.h  ODMultiAgentAStarProblem.cpp  ODMultiAgentAStarProblem.h  ODMultiAgentAStarProblemWithConstraints.cpp  ODMultiAgentAStarProblemWithConstraints.h  SingleAgentAStarProblem.cpp  SingleAgentAStarProblem.h  SingleAgentAStarProblemWithConstraints.cpp  SingleAgentAStarProblemWithConstraints.h  StandardMultiAgentAStarProblem.cpp  StandardMultiAgentAStarProblem.h  StandardMultiAgentAStarProblemWithConstraints.cpp  StandardMultiAgentAStarProblemWithConstraints.h
Boost_tests/: CMakeLists.txt  test1.cpp
ConflictConstraints/: Conflict.h  EdgeConstraint.h  VertexConstraint.h
Constraints/: ConstraintsSet.h  EdgeConstraint.h  VertexConstraint.h
GraphParser/: Graph.cpp  Graph.h  Parser.cpp  Parser.h
Heuristics/: HeuristicManhattan.h  HeuristicOptimal.h
Plotting/: bench.py  benchmark.py  collect_data.py  create_plots.py  main.py  main2.py  requirements.txt  utils.py
Problems/: MultiAgentProblem.cpp  MultiAgentProblem.h  MultiAgentProblemWithConstraints.cpp  MultiAgentProblemWithConstraints.h  Problem.h  SingleAgentProblem.cpp  SingleAgentProblem.h  SingleAgentProblemWithConstraints.cpp  SingleAgentProblemWithConstraints.h  SingleAgentSpaceTimeProblem.cpp  SingleAgentSpaceTimeProblem.h  StandardMultiAgentProblemWithConstraints.cpp  StandardMultiAgentProblemWithConstraints.h
Solution/: Solution.cpp  Solution.h
Solvers/: AStar.h  ConflictBasedSearch.cpp  ConflictBasedSearch.h  ConflictTreeNode.h  CooperativeAStar.h  Group.h  IndependenceDetection.cpp  IndependenceDetection.h  IndependentDetection.h  Node.h  ReverseResumableAStar.cpp  ReverseResumableAStar.h  SimpleIndependenceDetection.cpp  SimpleIndependenceDetection.h  Solvers.dox
States/: MultiAgentSpaceTimeState.cpp  MultiAgentSpaceTimeState.h  MultiAgentState.cpp  MultiAgentState.h  ODMultiAgentSpaceTimeState.cpp  ODMultiAgentSpaceTimeState.h  ODMultiAgentState.cpp  ODMultiAgentState.h  SingleAgentSpaceTimeState.cpp  SingleAgentSpaceTimeState.h  SingleAgentState.h  StandardMultiAgentSpaceTimeState.cpp  StandardMultiAgentSpaceTimeState.h  StandardMultiAgentState.cpp  StandardMultiAgentState.h  State.h
Visualisation/: runner_for_visualization.cpp  visualization-runner.cpp
mapf-map/: AssignmentIACourse.map  ReverseResumableAStarExample.map
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_12.js  all_13.js  all_2.js  all_3.js  all_4.js  (+86 more)
(+28 files in other folders)
